[tool.poetry]
name = "temp-checker"
version = "0.1.0"
description = ""
authors = ["lhleung <grandq33769@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.3.0"
webdriver-manager = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
